--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-component-lib",
+  "name": "scroll-indicator",
   "version": "1.0.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "repository": {
-    "url": "https://github.com/michal-wrzosek/react-component-lib",
+    "url": "https://github.com/Deep-Codes/scroll-indicator",
     "type": "git"
   },
   "license": "MIT",
@@ -35,17 +35,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "build-watch": "rollup -c -w",
-    "prepublishOnly": "npm run build",
-    "postinstall": "install-peers -f && cd example && npm i",
-    "start-example": "cd example && npm start",
-    "deploy-example": "cd example && npm run deploy",
-    "dev": "concurrently --kill-others \"npm run build-watch\" \"npm run start-example\"",
-    "test": "npm run test:lint && npm run test:unit",
-    "pretest": "npm run build",
-    "test:unit": "ts-node test/test.ts",
-    "test:lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./example/src/**/*.ts ./example/src/**/*.tsx",
-    "test:lint:fix": "npm run test:lint -- --fix"
+    "build-watch": "rollup -c -w"
   },
   "files": [
     "dist"
